--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: fa 
-Description: fa Wordpress theme.
+Theme Name: New Project
+Description: Project Wordpress theme.
 Version: 11-11-2018 
 */
