--- a/style/style.scss
+++ b/style/style.scss
@@ -10,5 +10,6 @@ $f: "Open Sans";
 
 @import 'components/flexbox';
 @import 'components/reset';
+@import 'components/fonts';
 @import 'components/code';
 @import 'components/rwd';
