--- a/style/components/reset.scss
+++ b/style/components/reset.scss
@@ -148,55 +148,6 @@ img {
   }
 }
 
-//SELECT
-.selbel_w {
-  position: relative;
-  display: block;
-  width: 100%;
-  font-size: 14px;
-  font-family: $f;
-  height: $inputH;
-  select {
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    position: relative;
-    display: block;
-    z-index: 1;
-    opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    + span {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: #fff;
-      color: #555;
-      padding: 0 10px;
-      border-radius: 5px;
-      border: 1px solid #eee;
-      line-height: $inputH;
-      &:after {
-        content: '';
-        width: 0;
-        height: 0;
-        border-style: solid;
-        border-width: 9px 5px 0 5px;
-        border-color: #555 transparent transparent transparent;
-        position: absolute;
-        right: 13px;
-        top: 16px;
-      }
-      &.err {
-        border-color: #ef4036
-      }
-    }
-    option {
-      padding: 5px
-    }
-  }
-}
 
 //CONTACT FORM
 div.wpcf7 {
@@ -204,21 +155,6 @@ div.wpcf7 {
     display: block !important;
     margin-bottom: 20px;
     clear: both;
-  }
-  .wpcf7-not-valid-tip {
-    background: #fff;
-    border: 1px solid #FF0000;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    cursor: pointer;
-    font-family: $f;
-    height: $inputH;
-    line-height: $inputH;
-    padding: 0 10px;
-    text-align: left;
   }
   .wpcf7-response-output {
     width: 100%;
@@ -231,7 +167,7 @@ div.wpcf7 {
     text-align: center;
   }
   .ajax-loader {
-    display: none;
+    //display: none;
   }
 }
 
