--- a/style/style.css
+++ b/style/style.css
@@ -128,73 +128,10 @@ img {
   width: 100%;
   z-index: -1;
 }
-.selbel_w {
-  position: relative;
-  display: block;
-  width: 100%;
-  font-size: 14px;
-  font-family: "Open Sans";
-  height: 40px;
-}
-.selbel_w select {
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-  position: relative;
-  display: block;
-  z-index: 1;
-  opacity: 0;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-}
-.selbel_w select + span {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: #fff;
-  color: #555;
-  padding: 0 10px;
-  border-radius: 5px;
-  border: 1px solid #eee;
-  line-height: 40px;
-}
-.selbel_w select + span:after {
-  content: '';
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 9px 5px 0 5px;
-  border-color: #555 transparent transparent transparent;
-  position: absolute;
-  right: 13px;
-  top: 16px;
-}
-.selbel_w select + span.err {
-  border-color: #ef4036;
-}
-.selbel_w select option {
-  padding: 5px;
-}
 div.wpcf7 .wpcf7-form-control-wrap {
   display: block !important;
   margin-bottom: 20px;
   clear: both;
-}
-div.wpcf7 .wpcf7-not-valid-tip {
-  background: #fff;
-  border: 1px solid #f00;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  cursor: pointer;
-  font-family: "Open Sans";
-  height: 40px;
-  line-height: 40px;
-  padding: 0 10px;
-  text-align: left;
 }
 div.wpcf7 .wpcf7-response-output {
   width: 100%;
@@ -205,9 +142,6 @@ div.wpcf7 .wpcf7-response-output {
   line-height: 20px;
   padding: 5px 20px;
   text-align: center;
-}
-div.wpcf7 .ajax-loader {
-  display: none;
 }
 .error404 .content {
   text-align: center;
@@ -280,7 +214,7 @@ div.wpcf7 .ajax-loader {
   position: absolute;
   top: 50%;
   -webkit-transform: translate(0, -50%);
-  -moztransform: translate(0, -50%);
+  -moz-transform: translate(0, -50%);
   transform: translate(0, -50%);
   right: 3%;
   width: 27px;
@@ -3240,14 +3174,14 @@ header {
     top: 0;
   }
 }
-.content ul {
+.content .wysiwyg ul {
   margin: 0 0 20px 15px;
 }
-.content ul li {
+.content .wysiwyg ul li {
   padding: 5px 0 5px 15px;
   position: relative;
 }
-.content ul li:before {
+.content .wysiwyg ul li:before {
   content: "";
   background: #0c59af;
   width: 4px;
@@ -3270,6 +3204,7 @@ header {
     -ms-transform: translateX(0);
     -o-transform: translateX(0);
     transform: translateX(0);
+    z-index: 100;
   }
   #mainMenu {
     position: fixed;
