change 404 page, remove Post thumnail editor and add custom class to reset.css

--- a/style/components/fonts.scss
+++ b/style/components/fonts.scss
@@ -2663,6 +2663,9 @@ readers do not read off random characters that represent icons */
 
 .fa-youtube-square:before {
   content: "\f431"; }
+.fa-cog:before {
+  content: "\f013";
+}
 
 .sr-only {
   border: 0;
