--- a/style/style.css
+++ b/style/style.css
@@ -3067,6 +3067,9 @@ textarea {
 .fa-youtube-square:before {
   content: "\f431";
 }
+.fa-cog:before {
+  content: "\f013";
+}
 .sr-only {
   border: 0;
   clip: rect(0, 0, 0, 0);
