--- a/style/components/rwd.scss
+++ b/style/components/rwd.scss
@@ -152,6 +152,9 @@
   .mobile_hide {
     display: none;
   }
+  body {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  }
 }
 
 @media screen and (max-width: 479px) {
