--- a/style/components/code.scss
+++ b/style/components/code.scss
@@ -37,6 +37,9 @@ a {
 header {
   position: relative;
   z-index: 100;
+  @include for-size($desktop) {
+    margin-top: 50px;
+  }
 }
 
 @media screen and (min-width: 1025px) {
@@ -101,7 +104,7 @@ header {
   }
 }
 
-.content .wysiwyg {
+.wysiwyg {
   ul {
     margin: 0 0 20px 15px;
     li {
