--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: New Project
+Theme Name: Art Gallery
 Description: Project Wordpress theme.
-Version: 11-11-2018 
+Version: 27-12-2019
 */
